# auth2fa

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
auth2fa/: __init__.py  adapters.py  core.py  recovery.py
auth2fa/sql/totp_auth/: create_table.sql  delete.sql  insert.sql  select_by_user.sql  update.sql
auth2fa/storage/: __init__.py  base.py  json_storage.py  sql_storage.py
